20220621:
 * added support for --quiet
 * changed CM_NEED_VERSION to CM_VERSION
 * added CM_VERSION_MIN, CM_VERSION_MAX
 * added cm compare_versions utils --version1=... --version2=...
 * added support to detect min/max/correct versions

20220617
 * fixed logic to handle variations (-_): https://github.com/mlcommons/ck/issues/243

20220616:
 * changed "cached" to "cache" automation

20220615:
 * major update of script (remove parallel env/new_env and state/new_state).
   keep global env & state and detect changes automatically
 * major simplification of "script"
 * removed "installed" to be more understandable
 * added "cached" to be more understandable

20220609:
 * added "versions" key to the CM script meta
   it works similar to "variations" and is forced by --version
 * changed "ic" to "script" in "experiment" automation

20220608:
 * updated "variations" logic in "script"!
   meta['default_variation'] (str): only one of many
   meta['default_variations'] (list): multiple choices

 * deprecated "ic" automation. Use "script" instead!

20220607:
 * added strip_folders to utils/unzip_file
 * fixed minor bugs in CM script

20220606:
 * added "name" key to deps (list of names and UIDs)
 * added "add_deps_tags" in variations and in CMD ({"name":"tag(s)"})
 * added "deps" to variations to be merged with the list of current deps
 * added --input and --output for cm run script converted to env CM_INPUT and CM_OUTPUT
   useful to create interactive CM scripts to process files

20220605:
 * clean tmp files in "script" automation by default and keep them using --dirty flag

20220603:
 * added "skip" and "deps" to postprocess to call other scripts.
   For example call install LLVM if detect LLVM fails...

 * added "script" automation to substitute less intuitive "ic"

20220601:
 * added version, path, skip_install and post_deps to IC 
 * added --new to IC to detect new components

20220530:
 * updated ic automation to read tmp-run-state.json 